# CSE6242_Team161_Application

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py
